# rag-chatbot

./: .env  package-lock.json  package.json  pyproject.toml  requirements.txt
cypress/: config.js
cypress/e2e/: chat.cy.js
cypress/fixtures/: chatResponse.json
cypress/support/: commands.js  e2e.js
dashboard/public/: index.html
dashboard/src/: App.js
dashboard/src/components/pages/: Analytics.js  Chat.js
data/sample-documents/: faq.txt
docs/: README.md  technical-approach.md
scripts/: logger.js  realtime_indexer.py  setup.py  utils.js
tests/: sample-queries.json
tests/frontend/: Analytics.test.js  Chat.test.js  setupTests.js
tests/frontend/integration/: LLMSelection.test.js
workflows/: rag-chatbot-workflow.json
